--- a/css and html/home.css
+++ b/css and html/home.css
@@ -1,5 +1,5 @@
-@font-face {
-    font-family: face;
+@font-face{
+    font-family: 'fawkes';
     src: url(fonts/fawkes.ttf);
 }
 
@@ -7,6 +7,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body{
+    font-family: 'fawkes';
 }
 
 html a{
@@ -39,6 +43,12 @@ main{
     color: #b4a2f3;
     padding-bottom: 10rem;
     background-color: #04010a;
+}
+
+footer{
+    background-color: #04010a;
+    color: #b4a2f3;
+
 }
 
 main a{
@@ -85,4 +95,11 @@ div.text-2{
     margin-top: 3em;
     margin-right: 30rem;
     margin-left: 29.5rem;
+}
+
+.copy{
+    display: flex;
+    align-items:end;
+    justify-content: center;
+
 }
