--- a/css and html/about.css
+++ b/css and html/about.css
@@ -42,7 +42,7 @@ header nav{
 main{
     color: #b4a2f3;
     padding-bottom: 10rem;
-    background-color: #04010a;
+    background-image: url(img/backgroundlobby.png);
 }
 
 footer{
@@ -65,7 +65,7 @@ section.text-1{
     align-items: center;
     padding: 32rem;
 }
-/* 
+
 div.text-2{
     display: flex;
     flex-direction: column;
@@ -95,7 +95,7 @@ div.text-2{
     margin-top: 3em;
     margin-right: 30rem;
     margin-left: 29.5rem;
-} */
+}
 
 .copy{
     display: flex;
