--- a/css and html/home.css
+++ b/css and html/home.css
@@ -42,7 +42,7 @@ header nav{
 main{
     color: #b4a2f3;
     padding-bottom: 10rem;
-    background-color: #04010a;
+    background-image: url(img/backgroundlobby.png);
 }
 
 footer{
